# order-matching-engine

./: .clang-tidy  .gitignore  CMakeLists.txt  FeedbackAndImprovements.md  README.md  dashboard.py  run_benchmark.sh
.github/workflows/: cmake.yml
scripts/: record_l3_data.py  seed_orders.py
src/: Bitset.hpp  CMakeLists.txt  Exchange.cpp  Exchange.hpp  FlatOrderBook.hpp  MatchingEngine.cpp  MatchingEngine.hpp  MatchingStrategy.cpp  MatchingStrategy.hpp  Order.cpp  Order.hpp  OrderBook.cpp  OrderBook.hpp  RingBuffer.hpp  TcpServer.cpp  TcpServer.hpp  benchmark.cpp  main.cpp
tests/: CMakeLists.txt  test_orderbook.cpp  verify_get_book.py  verify_market_data.py
